cmake_minimum_required(VERSION 3.10)

project(leetcode)
add_compile_options(-g -Werror)
add_subdirectory(third_party/gtest EXCLUDE_FROM_ALL)

function(leetcode_test test_file)
	get_filename_component(test_target_name "${test_file}" NAME_WE)
	add_executable("${test_target_name}" "")
	target_sources("${test_target_name}" 
			PRIVATE
			"${test_file}"
			)
	target_link_libraries("${test_target_name}" gtest_main)
endfunction(leetcode_test)

leetcode_test("src/leetcode_1.cpp")
leetcode_test("src/leetcode_2.cpp")
leetcode_test("src/leetcode_3.cpp")
leetcode_test("src/leetcode_4.cpp")
leetcode_test("src/leetcode_5.cpp")
leetcode_test("src/leetcode_6.cpp")
leetcode_test("src/leetcode_10.cpp")
leetcode_test("src/leetcode_11.cpp")
leetcode_test("src/leetcode_15.cpp")
leetcode_test("src/leetcode_16.cpp")
leetcode_test("src/leetcode_17.cpp")
leetcode_test("src/leetcode_20.cpp")
leetcode_test("src/leetcode_21.cpp")
leetcode_test("src/leetcode_22.cpp")
leetcode_test("src/leetcode_23.cpp")
leetcode_test("src/leetcode_31.cpp")
leetcode_test("src/leetcode_32.cpp")
leetcode_test("src/leetcode_33.cpp")
leetcode_test("src/leetcode_34.cpp")
leetcode_test("src/leetcode_36.cpp")
leetcode_test("src/leetcode_37.cpp")
leetcode_test("src/leetcode_39.cpp")
leetcode_test("src/leetcode_41.cpp")
leetcode_test("src/leetcode_42.cpp")
leetcode_test("src/leetcode_45.cpp")
leetcode_test("src/leetcode_46.cpp")
leetcode_test("src/leetcode_48.cpp")
leetcode_test("src/leetcode_49.cpp")
leetcode_test("src/leetcode_53.cpp")
leetcode_test("src/leetcode_55.cpp")
leetcode_test("src/leetcode_56.cpp")
leetcode_test("src/leetcode_62.cpp")
leetcode_test("src/leetcode_63.cpp")
leetcode_test("src/leetcode_64.cpp")
leetcode_test("src/leetcode_70.cpp")
leetcode_test("src/leetcode_72.cpp")
leetcode_test("src/leetcode_75.cpp")
leetcode_test("src/leetcode_76.cpp")
leetcode_test("src/leetcode_78.cpp")
leetcode_test("src/leetcode_79.cpp")
leetcode_test("src/leetcode_84.cpp")
leetcode_test("src/leetcode_85.cpp")
leetcode_test("src/leetcode_87.cpp")
leetcode_test("src/leetcode_89.cpp")
leetcode_test("src/leetcode_91.cpp")
leetcode_test("src/leetcode_92.cpp")
leetcode_test("src/leetcode_94.cpp")
leetcode_test("src/leetcode_96.cpp")
leetcode_test("src/leetcode_105.cpp")
leetcode_test("src/leetcode_115.cpp")
leetcode_test("src/leetcode_120.cpp")
leetcode_test("src/leetcode_121.cpp")
leetcode_test("src/leetcode_128.cpp")
leetcode_test("src/leetcode_131.cpp")
leetcode_test("src/leetcode_132.cpp")
leetcode_test("src/leetcode_136.cpp")
leetcode_test("src/leetcode_139.cpp")
leetcode_test("src/leetcode_140.cpp")
leetcode_test("src/leetcode_146.cpp")
leetcode_test("src/leetcode_148.cpp")
leetcode_test("src/leetcode_152.cpp")
leetcode_test("src/leetcode_153.cpp")
leetcode_test("src/leetcode_169.cpp")
leetcode_test("src/leetcode_174.cpp")
leetcode_test("src/leetcode_200.cpp")
leetcode_test("src/leetcode_207.cpp")
leetcode_test("src/leetcode_208.cpp")
leetcode_test("src/leetcode_213.cpp")
leetcode_test("src/leetcode_215.cpp")
leetcode_test("src/leetcode_221.cpp")
leetcode_test("src/leetcode_233.cpp")
leetcode_test("src/leetcode_238.cpp")
leetcode_test("src/leetcode_239.cpp")
leetcode_test("src/leetcode_241.cpp")
leetcode_test("src/leetcode_264.cpp")
leetcode_test("src/leetcode_279.cpp")
leetcode_test("src/leetcode_287.cpp")
leetcode_test("src/leetcode_295.cpp")
leetcode_test("src/leetcode_297.cpp")
leetcode_test("src/leetcode_300.cpp")
leetcode_test("src/leetcode_312.cpp")
leetcode_test("src/leetcode_313.cpp")
leetcode_test("src/leetcode_322.cpp")
leetcode_test("src/leetcode_329.cpp")
leetcode_test("src/leetcode_335.cpp")
leetcode_test("src/leetcode_343.cpp")
leetcode_test("src/leetcode_347.cpp")
leetcode_test("src/leetcode_354.cpp")
leetcode_test("src/leetcode_368.cpp")
leetcode_test("src/leetcode_375.cpp")
leetcode_test("src/leetcode_377.cpp")
leetcode_test("src/leetcode_394.cpp")
leetcode_test("src/leetcode_396.cpp")
leetcode_test("src/leetcode_403.cpp")
leetcode_test("src/leetcode_413.cpp")
leetcode_test("src/leetcode_416.cpp")
leetcode_test("src/leetcode_424.cpp")
leetcode_test("src/leetcode_435.cpp")
leetcode_test("src/leetcode_437.cpp")
leetcode_test("src/leetcode_438.cpp")
leetcode_test("src/leetcode_464.cpp")
leetcode_test("src/leetcode_474.cpp")
leetcode_test("src/leetcode_494.cpp")
leetcode_test("src/leetcode_560.cpp")
leetcode_test("src/leetcode_576.cpp")
leetcode_test("src/leetcode_621.cpp")
leetcode_test("src/leetcode_647.cpp")
leetcode_test("src/leetcode_739.cpp")
leetcode_test("src/leetcode_741.cpp")
leetcode_test("src/leetcode_763.cpp")
leetcode_test("src/leetcode_887.cpp")
leetcode_test("src/leetcode_1206.cpp")
leetcode_test("src/leetcode_1755.cpp")
